Added txt, edit

--- a/Սաակաշվիլի/Ուժերի զարթոնք/Սաակաշվիլի - Ուժերի զարթոնք.md
+++ b/Սաակաշվիլի/Ուժերի զարթոնք/Սաակաշվիլի - Ուժերի զարթոնք.md
@@ -30,7 +30,7 @@ ISBN 978-9939-0-2517-9
 Նվիրում եմ բոլոր ուկրաինացիներին և վրացիներին,  
 որ մեռան հանուն Ուկրաինայի ազատության,  
 բոլոր վրացիներին և ուկրաինացիներին,  
-որ մեռան հանուն Վրասւոանի ազաւոության։  
+որ մեռան հանուն Վրաստանի ազատության։  
 
 
 
